# Eidetic

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
docs/: SHOWCASE_ZH.md
examples/: langchain_agent_chat.py  try_eidetic.py
examples/notebooks/: common_vs_specific_interfaces.ipynb
src/eidetic/: __init__.py
src/eidetic/core/: __init__.py  errors.py  in_memory_backend.py  manager.py  models.py  plugin_base.py  protocols.py  registry.py  sqlite_backend.py  utils.py
src/eidetic/integrations/langchain/: __init__.py  memory.py
src/eidetic/plugins/graphrag/: __init__.py  _backend.py
src/eidetic/plugins/hipporag/: __init__.py  _backend.py
src/eidetic/plugins/letta/: __init__.py  _backend.py
src/eidetic/plugins/lightrag/: __init__.py  _backend.py
tests/contracts/: test_contracts.py  test_error_semantics.py
tests/integrations/langchain/: test_langchain_memory.py
tests/plugins/: test_smoke.py
