[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eidetic"
version = "0.1.0"
description = "All-in-one plug-and-play memory for AI agents."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Eidetic Contributors" }]
dependencies = [
  "pydantic>=2.7.0,<3",
]

[project.optional-dependencies]
letta = [
  "letta>=0.6.0",
]
graphrag = [
  "graphrag>=3.0.1",
]
lightrag = [
  "lightrag-hku>=1.4.0",
]
hipporag = [
  # Install manually — no stable PyPI release yet:
  # pip install "git+https://github.com/OSU-NLP-Group/HippoRAG.git"
]
langchain = [
  "langchain>=0.3.0",
  "langchain-core>=0.3.0",
]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/your-org/eidetic"
Repository = "https://github.com/your-org/eidetic"

[project.entry-points."eidetic.memory_plugins"]
letta = "eidetic.plugins.letta:get_plugin"
graphrag = "eidetic.plugins.graphrag:get_plugin"
lightrag = "eidetic.plugins.lightrag:get_plugin"
hipporag = "eidetic.plugins.hipporag:get_plugin"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
